fix: keep rich client tests java8 compatible